--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/drawer": "^5.4.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.9",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-font": "~8.1.0",
     "link": "^0.1.5",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
