--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/drawer": "^5.4.1",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
@@ -24,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider": "^2.0.3",
+    "react-native-maps": "0.26.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-navigation": "^6.4.0",
     "react-native-paper": "^3.8.0",
@@ -32,7 +33,8 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screen": "^1.0.0",
-    "react-native-screens": "^2.4.0",
+    "react-native-screens": "^2.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation-drawer": "^2.4.11",
