--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-maps": "0.26.1",
@@ -39,7 +40,10 @@
     "react-native-web": "~0.11.7",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-material-bottom-tabs": "^2.2.10",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
